gpgtar, Kleopatra: Unicode filenames that are not native 8 bit on Windows don't work
Closed, ResolvedPublic

Assigned To
Authored By
aheinecke
Jul 17 2018, 6:00 PM

Description

To test:
Create a directory with a file named "?.txt"

Try to encrypt the folder using GpgEX / Kleopatra.

This results in an error.

We need a way to pass gpgtar utf8 filenames (or wchar filenames but this would be uglyier) and then gpgtar needs to convert this internally to wchar or use estream functions that handle UTF8/wchar accordingly. Currently the 8bit stuff is only using native 8bit which usually is not utf8 and so does not handle unicode.

Details

Version
mARWE

Event Timeline

Done for master and 2.2.22 - libgpg-error 1.39 (not yet released) is required for the actual fix.

So if gnupg version >= 2.2.22 Kleopatra needs to convert the passed filenames to UTF-8 and pass them with the --utf8-strings option to gpgtar. This needs to be changed in Kleo. -> Assigned to me.

What is the current encoding? OEMCP ?

Works, I've tested with Kleopatra.